--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tarok",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/api",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -33,6 +32,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://127.0.0.1:5000",
   "browserslist": {
     "production": [
       ">0.2%",
