--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.35",
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
