--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^0.22.0",
+    "boardgame.io": "^0.49.5",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
